--- a/102-13/.project
+++ b/102-13/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>Coding365</name>
+	<name>102-13</name>
 	<comment></comment>
 	<projects>
 	</projects>
